--- a/web-and-mobile/html-css-js/style.css
+++ b/web-and-mobile/html-css-js/style.css
@@ -10,7 +10,7 @@ p
     text-decoration: underline;
 }
 
-#bigger-front
+#bigger-font
 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 32px;
